--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: hts
 Type: Package
 Title: Hierarchical time series
-Version: 1.2
-Date: 2010-07-16
+Version: 1.3
+Date: 2010-08-17
 Depends: forecast, SparseM
 LazyLoad: yes
 LazyData: yes
@@ -12,5 +12,5 @@ Description: Methods for analysing and forecasting hierarchical time
         series.
 License: GPL (>= 2)
 Repository: CRAN
-Date/Publication: 2010-07-24 20:20:44
-Packaged: 2010-07-16 07:00:46 UTC; hanshang
+Date/Publication: 2010-08-19 05:40:04
+Packaged: 2010-08-19 05:25:37 UTC; Administrator
