--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,18 @@
 Package: hts
 Type: Package
 Title: Hierarchical and grouped time series
-Version: 2.02
-Date: 2011-11-03
-Depends: forecast, SparseM
+Version: 3.00
+Date: 2013-03-07
+Depends: forecast
+Imports: SparseM
 LazyLoad: yes
 LazyData: yes
 Author: Rob J Hyndman, Roman A Ahmed, and Han Lin Shang
 Maintainer: Rob J Hyndman <Rob.Hyndman@monash.edu>
-Description: Methods for analysing and forecasting hierarchical and grouped time series.
+Description: Methods for analysing and forecasting hierarchical and
+        grouped time series.
 License: GPL (>= 2)
-Packaged: 2011-11-03 09:25:27 UTC; Rob
+Packaged: 2013-03-07 06:14:22 UTC; hyndman
+NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2011-11-07 14:05:25
+Date/Publication: 2013-03-07 07:59:17
