--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,8 +1,8 @@
 export(
 forecast.gts,
-forecast.hts,
 plot.gts,
 accuracy.gts,
+window.gts,
 hts,
 gts,
 allts,
@@ -11,13 +11,10 @@ Smatrix
 )
 
 S3method(forecast,gts)
-S3method(forecast,hts)
 S3method(plot,gts)
-S3method(accuracy,gts)
 S3method(print,gts)
-S3method(print,hts)
+S3method(window,gts)
 
 import(forecast)
 import(SparseM)
-import(grDevices)
-importFrom(stats)
+importFrom("stats", "window")
