--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,18 +1,18 @@
 Package: hts
 Type: Package
 Title: Hierarchical and grouped time series
-Version: 3.03
-Date: 2013-07-01
-Depends: forecast
-Imports: SparseM
+Version: 4.0
+Depends: forecast (>= 5.0)
+Imports: SparseM, parallel
+Suggests: testthat
 LazyLoad: yes
 LazyData: yes
-Author: Rob J Hyndman, Roman A Ahmed, and Han Lin Shang
+Author: Rob J Hyndman, Earo Wang and Alan Lee with contributions from Roman A Ahmed and Han Lin Shang to earlier versions of the package
 Maintainer: Rob J Hyndman <Rob.Hyndman@monash.edu>
-Description: Methods for analysing and forecasting hierarchical and
-        grouped time series.
+BugReports: https://github.com/robjhyndman/hts/issues
+Description: Methods for analysing and forecasting hierarchical and grouped time series.
 License: GPL (>= 2)
-Packaged: 2013-07-01 20:33:39 UTC; hyndman
+Packaged: 2014-02-10 06:33:12 UTC; hyndman
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-07-02 10:45:25
+Date/Publication: 2014-02-10 08:13:36
